--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
     args:
       - '-c'
       - |
-        git clone https://$GITHUB_TOKEN@github.com/abukalam2909/K8s_microservices.git /workspace/repo
+        git clone https://${_GITHUB_TOKEN}@github.com/abukalam2909/K8s_microservices.git /workspace/repo
     secretEnv: ['GITHUB_TOKEN']
 
   # Build Docker Images
@@ -13,7 +13,7 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:${SHORT_SHA}'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:$COMMIT_SHA'
       - '.'
     dir: '/workspace/repo/container1'
   
@@ -21,7 +21,7 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:${SHORT_SHA}'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:$COMMIT_SHA'
       - '.'
     dir: '/workspace/repo/container2'
 
@@ -29,12 +29,12 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:${SHORT_SHA}'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:$COMMIT_SHA'
   
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:${SHORT_SHA}'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:$COMMIT_SHA'
 
   # Deploy to GKE
   - name: 'gcr.io/cloud-builders/kubectl'
@@ -47,12 +47,13 @@ steps:
       - 'CLOUDSDK_CONTAINER_CLUSTER=my-gke-cluster'
 
 images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:${SHORT_SHA}'
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:${SHORT_SHA}'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:$COMMIT_SHA'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container2:$COMMIT_SHA'
 
-secrets:
-  - secretEnv:
-      GITHUB_TOKEN: 'projects/$PROJECT_ID/secrets/github-token/versions/latest'
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/github-token/versions/latest
+      env: 'GITHUB_TOKEN'
 
 options:
   logging: CLOUD_LOGGING_ONLY
