--- a/kubernetes/pod_1.yaml
+++ b/kubernetes/pod_1.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: container1
-        image: 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/container1:$COMMIT_SHA'
+        image: 'IMAGE_TAG_CONTAINER1'
         volumeMounts:
           - name: storage
             mountPath: "/AbuKalamBabuji_PV_dir"
