--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -48,12 +48,15 @@ steps:
   - name: 'gcr.io/cloud-builders/kubectl'
     args: ['apply', '-f', 'kubernetes/']
     env:
-      - 'CLOUDSDK_COMPUTE_REGION=${_REGION}'
+      - 'CLOUDSDK_COMPUTE_ZONE=${_ZONE}'
       - 'CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}'
+      - 'CLOUDSDK_PROJECT=${PROJECT_ID}'
 
 substitutions:
   _REGION: us-central1
+  _ZONE: us-central1-a
   _CLUSTER_NAME: my-gke-cluster
+  PROJECT_ID: ${PROJECT_ID}
 
 options:
   logging: CLOUD_LOGGING_ONLY
